<?xml version="1.0"?>
<package format="2">

  <name>trajectory_generators</name>
  <version>1.0.0</version>
  <description>The trajectory_generators package</description>
  <maintainer email="danielscodeemail@gmail.com">dan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtt_ros_tools</depend>
  <depend>rtt_ros</depend>
  <depend>rtt_roscomm</depend>
  <depend>rtt_rosclock</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_typekit</depend>
  <depend>eigen_typekit</depend>
  <depend>ros_cpp</depend>
  <depend>rospy</depend>
  <depend>trac_ik_lib</depend>
  <depend>kdl_conversions</depend>
  <depend>tf</depend>
  <depend>rtt_geometry_msgs</depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
    </rtt_ros>
  </export>

</package>
